# harness-sincronizer

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  harness_sync.py  harness_tui.py  pyproject.toml  test_harness_sync.py
docs/superpowers/plans/: 2026-06-29-harness-sync-skills.md  2026-06-30-n-harnesses.md  2026-07-01-plugin-skills.md  2026-07-01-tui.md  2026-07-01-untrack-prune.md  2026-07-02-asset-kinds.md  2026-07-02-instructions-sync.md  2026-07-02-mcp-sync.md  2026-07-02-pypi-packaging.md  2026-07-02-settings-sync.md  2026-07-02-two-way-sync.md  2026-07-02-whole-plugin-sync.md
docs/superpowers/specs/: 2026-06-29-harness-sync-skills-design.md  2026-06-30-n-harnesses-design.md  2026-07-01-plugin-skills-design.md  2026-07-01-tui-design.md  2026-07-01-untrack-prune-design.md  2026-07-02-asset-kinds-design.md  2026-07-02-cosmetic-kinds-design.md  2026-07-02-instructions-sync-design.md  2026-07-02-mcp-sync-design.md  2026-07-02-pypi-packaging-design.md  2026-07-02-settings-sync-design.md  2026-07-02-two-way-sync-design.md  2026-07-02-whole-plugin-sync-design.md
